[package]
name = "rpki"
description = "RPKI: Parallel Tensor Watermarking and Pathogen Isolation Protocol [RFC-003]"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage = "https://rpki.com"
documentation = "https://github.com/Aicent-Stack/manifesto/blob/main/rfcs/RFC-003-RPKI-IMMUNITY.md"
keywords = ["sovereign-ai", "zero-trust", "tensor-watermarking", "rfc-003", "pathogen-isolation"]
categories = ["cryptography", "network-programming", "security", "hardware-acceleration"]
rust-version = "1.75"

[dependencies]
# --- Core Organism Linking ---
rttp.workspace = true

# --- Parallel Immune Pipeline ---
# SIMD-level acceleration for sub-300µs pathogen detection
rayon.workspace = true
crossbeam.workspace = true
crossbeam-channel.workspace = true
parking_lot.workspace = true   # [PERF] High-concurrency immune triage

# --- Cryptographic DNA (Zero-Trust Provenance) ---
sha2.workspace = true          # Merkle-DAG chain integrity
ring.workspace = true          # Hardware-native cryptographic primitives
zeroize.workspace = true       # [SECURITY] Secure memory clearing for AID credentials

# --- Logic & Telemetry ---
serde = { workspace = true, features = ["derive"] }
anyhow.workspace = true
tracing.workspace = true       # Real-time pathogen classification logs
once_cell.workspace = true

[features]
default = ["std"]
std = ["serde/std", "anyhow/std"]
# [RFC-003] Enable AVX-512/SIMD acceleration for tensor watermarking
simd-acceleration = []
# [RFC-006] Enable collective Hive-Mind cross-attestation
hive-shield = []

[dev-dependencies]
# Benchmarking for 300µs quarantine latency
criterion = "0.5"
