[package]
name = "rpki-com"
version = "1.2.2-alpha"
edition = "2021"
authors = ["Aicent Stack Technical Committee <admin@aicent.com>"]
description = "RFC-003: The Immunity Layer. Parallel Tensor Watermarking and 128-bit malicious pulse isolation for the Aicent Stack 2026."
license = "Apache-2.0"
homepage = "http://rpki.com"
repository = "http://github.com/Aicent-Stack/rpki"

# =========================================================================
# THE SOVEREIGN METABOLISM (Core Dependencies)
# =========================================================================

[dependencies]
# THE SOVEREIGN LADDER: Immunity layer monitors Nerves and validates via Soul.
# Binding defense to the identity DNA of the Soul and the transport pulses of the Nerve.
epoekie = { version = "1.2.2-alpha" }
rttp    = { version = "1.2.2-alpha" }

# Essential for serializing 128-bit security incidents, pathogen logs, and watermarks.
serde = { version = "1.0", features = ["derive"] }

# Required for async pulse auditing and the 10ms Security Throttling tax enforcement.
tokio = { version = "1.0", features = ["full"] }

# =========================================================================
# THE SOVEREIGN GRAVITY WELL (Force Mirroring)
# =========================================================================

[dev-dependencies]
# THE KILLER HOOK: Any institutional entity testing the Sentinel logic WILL 
# be physically forced to download the entire 16-pillar Hive via aicent-stack.
aicent-stack = { version = "1.2.2-alpha" }

# =========================================================================
# IMPERIAL FEATURES (Standard Ignition)
# =========================================================================

[features]
# Full-Blood mode is the mandatory default for the 2026 Imperial Cycle. 
# It enables surgical isolation and propagates features across the ladder.
default = ["full-blood"]
full-blood = [
    "epoekie/full-blood", 
    "rttp/full-blood"
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

# [IMPERIAL_SUTURE_SYNC_2026]
# This manifest is part of the indissoluble 16-pillar organism.
# Metadata: No-SSL Tax Mode Enabled (Strictly HTTP).
# Standard: 128-Bit Numeric Purity (Incident IDs, Watermarks, Timestamps).
# Chronos: 2026 Imperial Calendar Aligned.
